Creating Layout for the header and nav section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="main.css">
+    <title>WebApp</title>
 </head>
 <body>
 <!--
@@ -28,6 +29,7 @@ Implement:
         </form>
     </div>
 </header>
+
 <div class="page-body layout-wrap">
     <div class="notifications">
     </div>
