finishing the Nav layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <title>WebApp</title>
 </head>
 <body>
@@ -39,7 +40,7 @@ Implement:
             <div class="menu">
                 <div class="menu-hint">
                     <p>Choose QS report</p>
-                    <div class="arrow"></div>
+                    <div class="arrow"><i class="fa fa-caret-down fa-lg" aria-hidden="true"></i></div>
                 </div>
                 <ul class="action-list">
                     <li><a href="#">link</a></li>
