Creating tabs layout

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ Implement:
             <li><a href="#public-folders">Public Folders</a>
             </li>
         </ul>
-        <div id="quick-reports">
+        <div id="quick-reports">test1
         </div>
-        <div id="fmy-folders">
+        <div id="fmy-folders">test2
         </div>
         <div id="my-team-folders">
         </div>
