Finishing screen layout

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Implement:
             <div class="menu">
                 <div class="menu-hint">
                     <p>Choose dashboard</p>
-                    <div class="arrow"></div>
+                    <div class="arrow"><i class="fa fa-caret-down fa-lg" aria-hidden="true"></i></div>
                 </div>
                 <ul class="action-list">
                     <li><a href="#">link</a></li>
@@ -72,7 +72,7 @@ Implement:
             <div class="menu">
                 <div class="menu-hint">
                     <p>Choose guide</p>
-                    <div class="arrow"></div>
+                    <div class="arrow"><i class="fa fa-caret-down fa-lg" aria-hidden="true"></i></div>
                 </div>
                 <ul class="action-list">
                     <li><a href="#">link</a></li>
@@ -95,9 +95,10 @@ Implement:
             <li><a href="#public-folders">Public Folders</a>
             </li>
         </ul>
-        <div id="quick-reports">test1
+        <div id="quick-reports">
+            <p>test1</p>
         </div>
-        <div id="fmy-folders">test2
+        <div id="fmy-folders"><p>test2 </p>
         </div>
         <div id="my-team-folders">
         </div>
