--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@ Implement:
             </li>
         </ul>
         <div id="quick-reports">
-            <p>test1</p>
         </div>
-        <div id="fmy-folders"><p>test2 </p>
+        <div id="fmy-folders">
         </div>
         <div id="my-team-folders">
         </div>
