Change all display layout to flexbox

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ Implement:
 </header>
 
 <section class="page-body layout-wrap">
-    <div class="notifications">
-    </div>
+    <div class="notifications"></div>
     <nav>
         <div class="nav-section">
             <p>Select Reporting Platform</p>
@@ -87,25 +86,18 @@ Implement:
             </div>
         </div>
     </nav>
+
     <section class="tabs">
         <ul>
-            <li><a href="#quick-reports">Quick Reports</a>
-            </li>
-            <li><a href="#fmy-folders">My Folders</a>
-            </li>
-            <li><a href="#my-team-folders">My Team Folders</a>
-            </li>
-            <li><a href="#public-folders">Public Folders</a>
-            </li>
+            <li><a href="#quick-reports">Quick Reports</a></li>
+            <li><a href="#fmy-folders">My Folders</a></li>
+            <li><a href="#my-team-folders">My Team Folders</a></li>
+            <li><a href="#public-folders">Public Folders</a></li>
         </ul>
-        <div id="quick-reports">
-        </div>
-        <div id="fmy-folders">
-        </div>
-        <div id="my-team-folders">
-        </div>
-        <div id="public-folders">
-        </div>
+        <div id="quick-reports"></div>
+        <div id="fmy-folders"></div>
+        <div id="my-team-folders"></div>
+        <div id="public-folders"></div>
     </section>
 </section>
 
